# meegnet

./: .gitignore  .readthedocs.yaml  README.md  README.rst  algorithms.py  autoencoder.py  baseline_ml.py  camcan_cnn.py  camcan_psd_classif.py  cc_compute_cosp.py  cc_params.py  cnn.py  compute_covcosp.py  compute_psd_from_fif.py  conf.py  create_dataloader.py  dataloaders.py  default.ini  default_values.ini  fif2npy.py  guided_backprop.py  index.rst  meegnet.toml  misc.py  ml.py  network.py  params.py  parser.py  parsing.py  pipeline.py  psd_classif.py  pyproject.toml  randomsearch.py  requirements.txt  run_algo.py  run_algo_test.py  run_baseline.sh  run_train.sh  setup.py  tSNE_visu.py  (+8 more)
camcan/: algorithms.py  baseline_ml.py  camcan_psd_classif.py  dataloaders.py  misc_functions.py  network.py  parsing.py  randomsearch.py  tSNE_visu.py  utils.py  viz.py
docs/: collaborate.rst  conf.py  contribute.rst  features.rst  index.rst  install.rst  meegnet.rst  meegnettuto.rst  modules.rst  prepare_data.ipynb  preparedata.rst  references.rst  requirements.txt  train_network.ipynb  tutorials.rst  visu_filters.ipynb  visu_gradcam.ipynb  visu_saliency.ipynb  welcome.rst
meegnet/: __init__.py  algorithms.py  dataloaders.py  fif2npy.py  layer.py  misc.py  ml_parser.py  ml_pipeline.py  network.py  networks.py  params.py  parsing.py  sub_cnn.py  util_viz.py  utils.py  visu_topomap.py  viz.py
notebooks/: HuggingFace.ipynb  Prepare Data Tutorial.ipynb  create_infos.ipynb  gradcam.ipynb  meegnet_functions.py  prepare_data.ipynb  psd_based_saliencies.ipynb  train_network.ipynb  visu_erps.ipynb  visu_filters.ipynb  visu_gradcam.ipynb  visu_saliency.ipynb  visu_saliency_paper_figure.ipynb
scripts/: README.rst  beluga.ini  belugasub.ini  benchmark.py  cnn.py  compute_psd_from_fif.py  compute_saliency_based_psd.py  compute_saliency_maps.py  default.ini  (+31 more)
(+43 files in other folders)
